# math-series

./: pyproject.toml
math_series/: series.py
math_series.egg-info/: PKG-INFO
tests/: test_series_fibonacci.py  test_series_lucas.py
