[tool.poetry]
name = "math-series"
version = "0.1.0"
description = ""
authors = ["Mayank Bhola <maybhola@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest-watch = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
